--- a/about.html
+++ b/about.html
@@ -27,16 +27,17 @@
 					</li>
 					<li>
 						<div class="menu-linkLine"></div>
-						<a href="#blog">Blog</a>
+						<a href="blog.html">Blog</a>
 					</li>
 					<li>
 						<div class="menu-linkLine"></div>
-						<a href="#contact">Contact</a>
+						<a href="contact.html">Contact</a>
 					</li>
 					<li>
-						<i class="fas fa-search"></i>
+						<i class="fas fa-search" onclick="openSearchField()"></i>
 					</li>
 				</ul>
+				<input type="text" placeholder="Search..." id="searchField" class="search-field"></input>
 			</nav>
 		</div>
 	</header>
