--- a/home.html
+++ b/home.html
@@ -29,16 +29,17 @@
 					</li>
 					<li>
 						<div class="menu-linkLine"></div>
-						<a href="#blog">Blog</a>
+						<a href="blog.html">Blog</a>
 					</li>
 					<li>
 						<div class="menu-linkLine"></div>
-						<a href="#contact">Contact</a>
+						<a href="contact.html">Contact</a>
 					</li>
 					<li>
-						<i class="fas fa-search"></i>
+						<i class="fas fa-search" onclick="openSearchField()"></i>
 					</li>
 				</ul>
+				<input type="text" placeholder="Search..." id="searchField" class="search-field"></input>
 			</nav>
 		</div>
 	</header>
@@ -98,67 +99,67 @@
 				<div class="image-column">
 					<div class="portfolio_image-item logo">
 						<img src="img/portfolio-item_1.png" alt="">
-						<div class="portfolio_img-overlay">
+						<a class="portfolio_img-overlay" href="portfolio_details_1.html">
 							<i class="fas fa-plus"></i>
-						</div>
+						</a>
 					</div>
 					<div class="portfolio_image-item logo">
 						<img src="img/portfolio-item_4.png" alt="">
-						<div class="portfolio_img-overlay">
+						<a class="portfolio_img-overlay" href="portfolio_details_4.html">
 							<i class="fas fa-plus"></i>
-						</div>
+						</a>
 					</div>
 					<div class="portfolio_image-item mobileApp">
 						<img src="img/portfolio-item_7.png" alt="">
-						<div class="portfolio_img-overlay">
+						<a class="portfolio_img-overlay" href="portfolio_details_7.html">
 							<i class="fas fa-plus"></i>
-						</div>
+						</a>
 					</div>
 				</div>
 				<div class="image-column">
-					<div class="portfolio_image-item mobileApp">
+					<div class="portfolio_image-item mobileApp uiix">
 						<img src="img/portfolio-item_2.png" alt="">
-						<div class="portfolio_img-overlay">
+						<a class="portfolio_img-overlay" href="portfolio_details_2.html">
 							<i class="fas fa-plus"></i>
-						</div>
+						</a>
 					</div>
 					<div class="portfolio_image-item wordpress">
 						<img src="img/portfolio-item_5.png" alt="">
-						<div class="portfolio_img-overlay">
+						<a class="portfolio_img-overlay" href="portfolio_details_5.html">
 							<i class="fas fa-plus"></i>
-						</div>
+						</a>
 					</div>
 					<div class="portfolio_image-item wordpress">
 						<img src="img/portfolio-item_8.png" alt="">
-						<div class="portfolio_img-overlay">
+						<a class="portfolio_img-overlay" href="portfolio_details_8.html">
 							<i class="fas fa-plus"></i>
-						</div>
+						</a>
 					</div>
 					<div class="portfolio_image-item webDesign">
 						<img src="img/portfolio-item_10.png" alt="">
-						<div class="portfolio_img-overlay">
+						<a class="portfolio_img-overlay" href="portfolio_details_10.html">
 							<i class="fas fa-plus"></i>
-						</div>
+						</a>
 					</div>
 				</div>
 				<div class="image-column">
-					<div class="portfolio_image-item webDesign">
+					<div class="portfolio_image-item mobileApp uiix">
 						<img src="img/portfolio-item_3.png" alt="">
-						<div class="portfolio_img-overlay">
+						<a class="portfolio_img-overlay" href="portfolio_details_3.html">
 							<i class="fas fa-plus"></i>
-						</div>
+						</a>
 					</div>
 					<div class="portfolio_image-item uiix">
 						<img src="img/portfolio-item_6.png" alt="">
-						<div class="portfolio_img-overlay">
+						<a class="portfolio_img-overlay" href="portfolio_details_6.html">
 							<i class="fas fa-plus"></i>
-						</div>
+						</a>
 					</div>
 					<div class="portfolio_image-item branding">
 						<img src="img/portfolio-item_9.png" alt="">
-						<div class="portfolio_img-overlay">
+						<a class="portfolio_img-overlay" href="portfolio_details_9.html">
 							<i class="fas fa-plus"></i>
-						</div>
+						</a>
 					</div>
 				</div>
 			</div>
