--- a/portfolio_details_10.html
+++ b/portfolio_details_10.html
@@ -28,16 +28,17 @@
 					</li>
 					<li>
 						<div class="menu-linkLine"></div>
-						<a href="#blog">Blog</a>
+						<a href="blog.html">Blog</a>
 					</li>
 					<li>
 						<div class="menu-linkLine"></div>
-						<a href="#contact">Contact</a>
+						<a href="contact.html">Contact</a>
 					</li>
 					<li>
-						<i class="fas fa-search"></i>
+						<i class="fas fa-search" onclick="openSearchField()"></i>
 					</li>
 				</ul>
+				<input type="text" placeholder="Search..." id="searchField" class="search-field"></input>
 			</nav>
 		</div>
 	</header>
@@ -214,7 +215,6 @@
 		</div>
 		<p>© 2016 <span>Mulitix Theme</span> by ThemeForces. All Rights Reserved.</p>
 	</footer>
-	<!-- <img src="04_portfolio_details.png" style="position: absolute; width: 100%; z-index: 1000; top: 0; opacity: 0.2;" alt=""> -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
 	<script src="js/main.js"></script>
