--- a/blog_single-post-3.html
+++ b/blog_single-post-3.html
@@ -15,7 +15,7 @@
 				<ul class="menu">
 					<li>
 						<div class="menu-linkLine"></div>
-						<a href="home.html">Home</a>
+						<a href="index.html">Home</a>
 					</li>
 					<li>
 						<div class="menu-linkLine"></div>
