--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Lian Portfolio</title>
+	<title>Lian Home</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto|Roboto:100|Roboto:300|Roboto:700" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-	<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
 </head>
 <body>
 	<header>
@@ -15,16 +16,16 @@
 				<img src="img/logo.png" alt="">
 				<ul class="menu">
 					<li>
-						<div class="menu-linkLine"></div>
-						<a href="index.html">Home</a>
+						<div class="activePage-linkLine"></div>
+						<a class="activePage" href="#home">Home</a>
 					</li>
 					<li>
 						<div class="menu-linkLine"></div>
 						<a href="about.html">About</a>
 					</li>
 					<li>
-						<div class="activePage-linkLine"></div>
-						<a class="activePage" href="portfolio.html">Portfolio</a>
+						<div class="menu-linkLine"></div>
+						<a href="portfolio.html">Portfolio</a>
 					</li>
 					<li>
 						<div class="menu-linkLine"></div>
@@ -42,16 +43,40 @@
 			</nav>
 		</div>
 	</header>
-	<section class="portfolio_heading">
-		<img src="img/portfolioHeading-bg.png" alt="">
-		<div class="container">
-			<div class="portfolio_heading-text_wrapper">
-				<h2>Latest Projects</h2>
-				<p>We deliver quality</p>
+	<section id="mainSlider" class="slider">
+		<div class="owl-carousel owl-theme">
+			<div class="item">
+				<div class="centering-text">
+					<div class="slider-text_wrapper">
+						<h2>Lian Creative Agency</h2>
+						<p>Minimal Freelance Portfolio</p>
+					</div>
+				</div>
+				<img src="img/slide1.png"/>
+			</div>
+			<div class="item">
+				<div class="centering-text">
+					<div class="slider-text_wrapper">
+						<h2>Design & Branding</h2>
+						<p>We Deliver Quality Results</p>
+					</div>
+				</div>
+				<img src="img/slide2.png"/>
+			</div>
+			<div class="item">
+				<div class="centering-text">
+					<div class="slider-text_wrapper">
+						<h2>Lian Creative Agency</h2>
+						<p>Minimal Freelance Portfolio</p>
+					</div>
+				</div>
+				<img src="img/slide1.png"/>
 			</div>
 		</div>
+		<a class="customPrevBtn sliderBtns"><i class="fas fa-angle-left"></i></a>
+		<a class="customNextBtn sliderBtns"><i class="fas fa-angle-right"></i></a>
 	</section>
-	<section class="portfolioMain">
+	<section class="portfolio-wrapper">
 		<div class="container">	
 			<div class="tab-nav">
 				<ul>
@@ -87,12 +112,6 @@
 					<div class="portfolio_image-item mobileApp">
 						<img src="img/portfolio-item_7.png" alt="">
 						<a class="portfolio_img-overlay" href="portfolio_details_7.html">
-							<i class="fas fa-plus"></i>
-						</a>
-					</div>
-					<div class="portfolio_image-item mobileApp">
-						<img src="img/portfolio-item_14.png" alt="">
-						<a class="portfolio_img-overlay" href="portfolio_details_11.html">
 							<i class="fas fa-plus"></i>
 						</a>
 					</div>
@@ -145,11 +164,10 @@
 				</div>
 			</div>
 			<div class="button_wrapper">
-				<div href="" class="portfolio_load-more_btn" onclick="showMoreBtn()">Load more</div>
+				<a href="portfolio.html" class="portfolio_load-more_btn">Load more</a>
 			</div>
 		</div>
 	</section>
-
 	<footer>
 		<img src="img/logoFooter.png" alt="">
 		<div class="socials_wrapper">
@@ -164,7 +182,7 @@
 		<p>© 2016 <span>Mulitix Theme</span> by ThemeForces. All Rights Reserved.</p>
 	</footer>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+	<script src="libs/owl.carousel.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
